--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
     "axios": "^0.19.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
-    "react-swipeable-views": "^0.13.3",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "react-swipeable-views": "^0.13.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,7 +54,6 @@
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
-    "pretty-quick": "^2.0.1",
-    "redux-devtools-extension": "^2.13.8"
+    "pretty-quick": "^2.0.1"
   }
 }
