--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react-swipeable-views": "^0.13.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack --mode development --open --hot",
+    "build": "webpack --mode production",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
