--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "react-swipeable-views": "^0.13.3"
   },
   "scripts": {
-    "start": "webpack --mode development --open --hot",
-    "build": "webpack --mode production",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "start": "webpack-dev-server --mode=development --open --hot",
+    "build": "rimraf build && webpack --mode=production",
+    "lint": "eslint src/",
+    "lint:fix": "eslint --fix src/"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,15 +45,25 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
     "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.16.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
-    "pretty-quick": "^2.0.1"
+    "pretty-quick": "^2.0.1",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
