--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
-    "react-swipeable-views": "^0.13.3"
+    "react-swipeable-views": "^0.13.3",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "webpack-dev-server --mode=development --open --hot",
