--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
         "codeFrame": false
     },
     "extends": ["airbnb", "prettier", "prettier/react"],
-    "plugins": ["jsx-a11y", "prettier"],
+    "plugins": ["import", "jsx-a11y", "prettier", "react", "react-hooks"],
     "env": {
         "browser": true,
         "jest": true
