--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-loading-skeleton": "^2.0.1",
-    "react-router-dom": "^5.1.2",
-    "styled-components": "^5.0.1",
-    "styled-theming": "^2.2.0"
+    "react-router-dom": "^5.1.2"
   },
   "scripts": {
     "start": "webpack-dev-server --mode=development --open --hot",
