--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "firebase": "^7.14.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-loading-skeleton": "^2.0.1",
@@ -16,7 +17,8 @@
     "start": "webpack-dev-server --mode=development --open --hot",
     "build": "rimraf build && webpack --mode=production",
     "lint": "eslint src/",
-    "lint:fix": "eslint --fix src/"
+    "lint:fix": "eslint --fix src/",
+    "deploy": "firebase deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
